Wed Apr 30 01:08:39 BST 2003  Olly Betts <olly@survex.com>

	* .cvsignore: Added config.guess.

Tue Apr 29 21:08:40 BST 2003  Olly Betts <olly@survex.com>

	* include/om/om.h,include/xapian/base.h,include/xapian/error.h,
	  include/xapian/errorhandler.h,include/xapian/expanddecider.h,
	  include/xapian/positionlistiterator.h,include/xapian/stem.h,
	  include/xapian/termiterator.h: OM_HGUARD_* -> XAPIAN_INCLUDED_*.

Tue Apr 29 20:37:01 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/,common/,include/,indexer/omnodeinstanceiterator.h,
	  indexer/ompaditerator.h,net/readquery.h,testsuite/indexer.h:
	  om/omoutput.h -> xapian/output.h; om/omtypes.h -> xapian/types.h.

Tue Apr 29 18:28:27 BST 2003  Olly Betts <olly@survex.com>

	* api/,backends/,common/,include/,matcher/,net/socketserver.cc,tests/,
	  testsuite/backendmanager.cc,testsuite/testsuite.cc: OmTermIterator
	  -> Xapian::TermIterator, etc.

Tue Apr 29 17:39:34 BST 2003  Olly Betts <olly@survex.com>

	* common/omdebug.cc: Setting XAPIAN_DEBUG_LOG caused an exception
	  (with GCC 3.0 at least) unless the value contained %% - fixed.

Tue Apr 29 14:29:36 BST 2003  Olly Betts <olly@survex.com>

	* api/ompositionlistiterator.cc: Fixed to compile in debug mode.

Tue Apr 29 01:06:02 BST 2003  Olly Betts <olly@survex.com>

	* xapian.spec.in: Removed %changelog - it hasn't been reliably updated
	  and only really makes sense when the packaging is done by a third
	  party anyway.

Tue Apr 29 01:03:20 BST 2003  Fabrice Colin

	* xapian.spec.in: Fixed packaging of docs.

Tue Apr 29 00:33:21 BST 2003  Olly Betts <olly@survex.com>

	* HACKING,testsuite/testsuite.cc,testsuite/testsuite.h: valgrind is
	  now mostly hooked into the testsuite.
	* HACKING: Bison 1.875 doesn't work but Bison 1.875a probably does;
	  suggest CXXFLAGS=-Werror, not CFLAGS.
 
Tue Apr 29 00:14:00 BST 2003  Olly Betts <olly@survex.com>

	* INSTALL: Updated.

Wed Apr 23 14:31:51 BST 2003  Olly Betts <olly@survex.com>
